<resources>
    <string name="app_name">Saint Tropez</string>
    <string name="top_text">TOP_PAGE</string>
    <string name="dinner01T">海の幸コース</string>
    <string name="dinner02T">牛フィレ肉のセット</string>
    <string name="dinnerT">ディナー</string>
    <string name="lunchT">ランチ</string>
    <string name="lunch01T">エビフライと牛ロースステーキ</string>
    <string name="lunch02T">鶏の赤ワイン煮</string>
    <string name="smsT">SMSで予約</string>
    <string name="mailT">メールで予約</string>
    <string name="shareT">共有する</string>
    <string name="browseT">ブラウザで開く</string>
    <string name="smsNumber">999-9999-9999</string>
    <string name="emailAddress">nobody@example.com</string>
    <string name="emailSubject">予約問い合わせ</string>
    <string name="emailText">以下の通り予約希望します</string>
    <string name="shareText">美味しいレストランを紹介します。</string>
    <string name="browseUrl">http://www.yahoo.co.jp</string>
</resources>
