<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/top"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/top_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/dinner"
        android:title="@string/dinnerT">
        <menu>
            <item
                android:id="@+id/dinner01"
                android:title="@string/dinner01T" />
            <item
                android:id="@+id/dinner02"
                android:title="@string/dinner02T" />
        </menu>
    </item>
    <item
        android:id="@+id/lunch"
        android:title="@string/lunchT">
        <menu>
            <item
                android:id="@+id/lunch01"
                android:title="@string/lunch01T" />
            <item
                android:id="@+id/lunch02"
                android:title="@string/lunch02T" />
        </menu>
    </item>
</menu>